@@ -78,6 +78,7 @@ class Names {
 		'az' => 'azərbaycanca', # Azerbaijani
 		'azb' => 'تۆرکجه', # South Azerbaijani
 		'ba' => 'башҡортса', # Bashkir
+		'ban' => 'Basa Bali', # Balinese
 		'bar' => 'Boarisch', # Bavarian (Austro-Bavarian and South Tyrolean)
 		'bat-smg' => 'žemaitėška', # Samogitian (deprecated code, 'sgs' in ISO 693-3 since 2010-06-30 )
 		'bbc' => 'Batak Toba', # Batak Toba (falls back to bbc-latn)
