@@ -1,0 +1,12 @@
+<?php
+/** Basa Bali (Basa Bali)
+ *
+ * To improve a translation please visit https://translatewiki.net
+ *
+ * @ingroup Language
+ * @file
+ *
+ */
+
+$fallback = 'id';
+
